--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <%= flash.each do |name, msg| %>
+    <ul>
+      <li><%= msg %></li>
+    </ul>
+  <% end %>
 <%= yield %>
 
 </body>
