--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,19 +14,38 @@
       <li><%= link_to 'Sushi', sushis_path, class: 'navbar-link' %></li>
       <li><%= link_to 'Articles', articles_path, class: 'navbar-link' %></li>
     </ul>
-    
-    <h1>
-      Showing selected article
-    </h1>
 
-    <p>
-      Title: <%= @article.title %>
-    </p>
-    <p>
-      Description: <%= @article.description %>
-    </p>
+    <% if @article.errors.any? %>
+    <h2>
+      The following errors prevented the article from being created:
+    </h2>
+      <ul>
+        <% @article.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    <% end %>
 
-    <%= link_to 'Edit this article', edit_article_path(@article) %> | 
+
+    <%= form_for @article do |f| %>
+      <p>
+        <%= f.label :title %>
+        <br>
+        <%= f.text_field :title %>
+      </p>
+
+      <p>
+        <%= f.label :description %>
+        <br>
+        <%= f.text_area :description %>
+      </p>
+
+      <p>
+        <%= f.submit %>
+      </p>
+
+    <% end %>
+
     <%= link_to 'Back to articles listing', articles_path %>
     
   </body>
