--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,36 +1,25 @@
-<h1>
-  Edit existing article
-</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="/app/assets/stylesheets/style.css">
+    <title>About</title>
+  </head>
+  
+  <body>
+    
+    <!-- Navbar -->
+    <ul class="navbar">
+      <li><%= link_to 'Home', root_path, class: 'navbar-link' %></li>
+      <li><%= link_to 'About', about_path, class: 'navbar-link' %></li>
+      <li><%= link_to 'Sushi', sushis_path, class: 'navbar-link' %></li>
+      <li><%= link_to 'Articles', articles_path, class: 'navbar-link' %></li>
+    </ul>
 
-<% if @article.errors.any? %>
-<h2>
-  The following errors prevented the article from being created:
-</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+    <h1>
+      Edit existing article
+    </h1>
 
-
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %>
-    <br>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :description %>
-    <br>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
-
-<%= link_to 'Back to articles listing', articles_path %>
+    <%= render 'form' %>
+    
+  </body>
+</html>
