--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,6 +11,8 @@
     <ul class="navbar">
       <li><%= link_to 'Home', root_path, class: 'navbar-link' %></li>
       <li><%= link_to 'About', about_path, class: 'navbar-link' %></li>
+      <li><%= link_to 'Sushi', sushis_path, class: 'navbar-link' %></li>
+      <li><%= link_to 'Articles', articles_path, class: 'navbar-link' %></li>
     </ul>
     
     <table class="centered-table-mid">
