--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,43 +1,26 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="/app/assets/stylesheets/style.css">
-    <title>About</title>
-  </head>
-  
-  <body>
-    
-    <!-- Navbar -->
-    <ul class="navbar">
-      <li><%= link_to 'Home', root_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'About', about_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'Sushi', sushis_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'Articles', articles_path, class: 'navbar-link' %></li>
-    </ul>
+<%= render 'layouts/navbar' %>
 
-    <h1>
-      Listing all articles
-    </h1>
+<h1>
+  Listing all articles
+</h1>
 
-    <p>
-      <%= link_to 'Create new article', new_article_path %>
-    </p>
+<p>
+  <%= link_to 'Create new article', new_article_path %>
+</p>
 
-    <table>
-      <tr>
-        <th>Title</th>
-        <th>Description</th>
-      </tr>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Description</th>
+  </tr>
 
-      <%= @articles.each do |a| %>
-        <tr>
-          <td><%= a.title %></td>
-          <td><%= a.description %></td>
-          <td><%= link_to 'Show', article_path(a) %></td>
-          <td><%= link_to 'Edit', edit_article_path(a) %></td>
-          <td><%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: "Are you sure?"} %></td>
-        </tr>
-      <% end %>
-    </table>
-  </body>
-</html>
+  <% @articles.each do |a| %>
+    <tr>
+      <td><%= a.title %></td>
+      <td><%= a.description %></td>
+      <td><%= link_to 'Show', article_path(a) %></td>
+      <td><%= link_to 'Edit', edit_article_path(a) %></td>
+      <td><%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: "Are you sure?"} %></td>
+    </tr>
+  <% end %>
+</table>
