--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,33 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="/app/assets/stylesheets/style.css">
-    <title>About</title>
-  </head>
-  
-  <body>
-    
-    <!-- Navbar -->
-    <ul class="navbar">
-      <li><%= link_to 'Home', root_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'About', about_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'Sushi', sushis_path, class: 'navbar-link' %></li>
-      <li><%= link_to 'Articles', articles_path, class: 'navbar-link' %></li>
-    </ul>
-    
-    <h1>
-      Showing selected article
-    </h1>
+<%= render 'layouts/navbar' %>
 
-    <p>
-      Title: <%= @article.title %>
-    </p>
-    <p>
-      Description: <%= @article.description %>
-    </p>
+<h1>
+  Showing selected article
+</h1>
 
-    <%= link_to 'Edit this article', edit_article_path(@article) %> | 
-    <%= link_to 'Back to articles listing', articles_path %>
-    
-  </body>
-</html>
+<p>
+  Title: <%= @article.title %>
+</p>
+<p>
+  Description: <%= @article.description %>
+</p>
+
+<%= link_to 'Edit this article', edit_article_path(@article) %> | 
+<%= link_to 'Back to articles listing', articles_path %>
