--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'layouts/messages' %>
+  <% render 'layouts/messages' %>
   <%= yield %>
 </body>
 </html>
