Create homepage and add links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,4 @@
-<%= render 'layouts/navbar' %>
-    
-<h1 class='home-title'>
-  The sushi life
-</h1>
-
-<table width="100%">
-  <tr>
-    <td>
-      <img src="https://photos.smugmug.com/Asia/Japan/Sushi-Dai/i-xkpK75C/1/b1f8720c/L/IMG_0995-L.jpg" alt="Ootoro sushi">
-    </td>
-    <td>
-      <blockquote>
-        <p>
-          Once you decide on your occupation... you must immerse yourself in your work. You have to fall in love with your work. Never complain about your job. You must dedicate your life to mastering your skill. That's the secret of success... and is the key to being regarded honorably.
-        </p>
-
-        <br>
-        <br>
-
-        <p class="author">
-        Jiro Ono
-        </p>
-      </blockquote>
-    </td>
-  </tr>
-
-</table>
+<div class="center jumbotron">
+  <h1>THE SUSHI LIFE</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlg" %> 
+</div>
