Style form partial

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="https://www.grain.com.sg">The sushi life</a>
+      Copyright &copy; <a href="https://www.grain.com.sg">The Sushi Life</a>
       by <a href="https://www.grain.com.sg">Grain</a>
     </small>
     <nav>
