--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 </head>
 <body>
   <%= render 'layouts/navigation' %>
-  <% render 'layouts/messages' %>
+  <%= render 'layouts/messages' %>
   
   <div class="container">
     <%= yield %> 
