--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,6 +45,15 @@ $navbar-default-bg: black;
   background-color: #4E4243;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 0;
+}
+
 .footer {
   margin-top: 45px;
   padding-top: 5px;
