--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,6 +54,16 @@ $navbar-default-bg: black;
   margin-top: 0;
 }
 
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding: 15px 0px; 
+}
+
 .footer {
   margin-top: 45px;
   padding-top: 5px;
