--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,6 +69,11 @@ $navbar-default-bg: black;
   padding: 15px 0px; 
 }
 
+.listing {
+  list-style: none;
+  padding-let: 0;
+}
+
 .footer {
   margin-top: 45px;
   padding-top: 5px;
