--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,3 +1,4 @@
+
 <% obj.each do |article| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
@@ -15,12 +16,15 @@
           </div>
           
         </div>
-        <div class="article-actions">
-          <%= link_to 'Edit this article', edit_article_path(article), class: "btn btn-primary btn-xs" %>
-          <%= link_to 'Delete this article', article_path(article), method: :delete,
-                                             data: {confirm: "Are you sure you want to delete this article?"},
-                                             class: "btn btn-danger btn-xs" %>
-        </div>
+        
+        <% if logged_in? && current_user == article.user %>
+          <div class="article-actions">
+            <%= link_to 'Edit this article', edit_article_path(article), class: "btn btn-primary btn-xs" %>
+            <%= link_to 'Delete this article', article_path(article), method: :delete,
+                                               data: {confirm: "Are you sure you want to delete this article?"},
+                                               class: "btn btn-danger btn-xs" %>
+          </div>
+        <% end %>
       </div>
     </div>
 </div>  
