--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,10 +3,11 @@
 </h1>
 
 <div align="center">
+  <%= will_paginate %>
   <% @categories.each do |category | %>
     <ul class="listing">
       <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="well col-md-4 col-md-offset-4">
           <li class="article-title">
             <%= link_to "#{category.name}", category_path(category) %>
           </li>
@@ -14,4 +15,5 @@
       </div>  
     </ul>
   <% end %>
+  <%= will_paginate %>
 </div>  
