--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,9 +13,14 @@
             <%= time_ago_in_words(article.created_at) %> ago,
             last update: <%= time_ago_in_words(article.updated_at) %> ago
             </small>  
-          </div>
-          
+          </div>  
         </div>
+        
+        <% if article.categories.any? %>
+          <p>
+            Categories: <%= render article.categories %>
+          </p>
+        <% end %>
         
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
